--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.1",
@@ -24,7 +23,6 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "5.0.0",
     "popper.js": "^1.14.7",
-    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "vue": "^2.6.10",
@@ -37,7 +35,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.13",
-    "moment": "^2.24.0"
+    "autoprefixer": "^10.1.0",
+    "postcss-import": "^13.0.0",
+    "tailwindcss": "^2.0.1"
   }
 }
