--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./client/webpack.dev.js ",
-    "local": "webpack-dev-server --config ./client/webpack.dev.js --open",
+    "local": "webpack-dev-server --config ./client/webpack.dev.js --open \"Firefox\"",
     "prod": "webpack --config ./client/webpack.prod.js ",
     "gas": "webpack --config ./server/webpack.gas.js ",
     "deploy": "npm run prod &&  npm run gas && cd deploy/gas && rm app.bundle.js && clasp push && clasp open --webapp"
@@ -39,6 +39,7 @@
     "postcss": "^7",
     "postcss-import": "^13.0.0",
     "postcss-loader": "^4.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
