--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gas",
+  "name": "vtg_starter_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A starter Vue + Tailwind + Google Apps Script app",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./client/webpack.dev.js ",
