--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "local": "webpack-dev-server --config ./client/webpack.dev.js --open \"Firefox\"",
     "prod": "webpack --config ./client/webpack.prod.js ",
     "gas": "webpack --config ./server/webpack.gas.js ",
-    "deploy": "npm run prod &&  npm run gas && cd deploy/gas && rm app.bundle.js && clasp push && clasp open --webapp"
+    "deploy": "npm run prod &&  npm run gas && cd deploy/gas && rm app.bundle.js && clasp push"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +41,7 @@
     "postcss": "^7",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^4.1.0",
+    "purgecss": "^3.0.0",
     "purgecss-webpack-plugin": "^3.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "uglifyjs-webpack-plugin": "^2.2.0"
